--- a/astro-app/src/components/layout/Header.astro
+++ b/astro-app/src/components/layout/Header.astro
@@ -7,7 +7,7 @@ import { Icon } from "astro-icon/components";
 
 <header
 	id="main-header"
-	class="fixed px-4 md:px-0 left-0 z-20 flex items-center md:relative top-0 h-16 w-full bg-bgColor md:bg-transparent overflow-hidden"
+	class="fixed px-4 md:px-0 left-0 z-20 flex items-center md:relative top-0 h-24 w-full bg-bgColor md:bg-transparent overflow-hidden"
 >	
 	<!-- Background 
 			TODO: This approach is not optimal and requires improvements. 
@@ -32,55 +32,23 @@ import { Icon } from "astro-icon/components";
 				class="group flex h-8 items-center hover:filter-none sm:relative"
 				href="/"
 			>	
-				<!-- Logo -->
-				<!--
-				<div class="pt-1.5">
-					<svg class="inline-block size-8 fill-current text-accent-base drop-shadow-[0px_2.5px_2.5px_rgba(0,0,0,0.35)]">
-						<use href="/brand.svg#brand"></use>
-					</svg>
-				</div>
-				-->
+
 				<div title={siteConfig.title}>
-					<svg class="inline-block size-8 fill-current text-accent-base dark:text-accent-two drop-shadow-[0px_2.5px_2.5px_rgba(0,0,0,0.35)]">
-						<use href="/brand.svg#citrus"></use>
+					<svg class="inline-block size-24 fill-current text-accent-base dark:text-accent-two drop-shadow-[0px_2.5px_2.5px_rgba(0,0,0,0.35)]">
+						<use href="/logo.svg#logo"></use>
 					</svg>
 				</div>
-				
+				<!-- 
 				<strong class="'max-[320px]:hidden' bg-clip-text text-transparent bg-gradient-to-r from-accent-one to-accent-two hidden xs:block z-10 mb-0.5 ms-2 text-2xl group-hover:text-accent-one">
 					{siteConfig.title}
-				</strong>
+				</strong> 
+				-->
 			</a>
 			<nav
 				aria-label="Main menu"
 				class="top-20 text-sm mx-auto ml-4 ml-auto hidden flex-col items-end justify-center gap-x-4 rounded-md bg-bgColor font-medium text-accent-two shadow backdrop-blur group-[.menu-open]:z-50 group-[.menu-open]:flex sm:static sm:z-auto sm:flex-row sm:items-center sm:rounded-none sm:bg-transparent sm:shadow-none sm:backdrop-blur-none md:flex"
 				id="main-navigation-menu"
-			>	
-				<!--				
-				<a
-					aria-current={Astro.url.pathname === "/" ? "page" : false}
-					class="flex gap-x-1 h-8 items-center justify-center rounded-lg underline-offset-2 hover:underline"
-					href="/"
-				>	
-					<Icon
-						class="size-4 drop-shadow-[0px_1.5px_1.5px_rgba(0,0,0,0.175)]"
-						name="solar:home-2-bold"
-					/>
-					Home
-				</a>
-				<a
-					aria-current={Astro.url.pathname === "/" ? "page" : false}
-					class="flex gap-x-1 h-8 items-center justify-center rounded-lg underline-offset-2 hover:underline"
-					href="/"
-				>	
-					<Icon
-						class="size-4 drop-shadow-[0px_1.5px_1.5px_rgba(0,0,0,0.175)]"
-						name="solar:archive-bold"
-					/>
-					Blog
-				</a>
-				-->
-
-				<!-- Ссылки меню -->
+			>
 				{
 					menuLinks.map((link) => (
 						<a
@@ -93,14 +61,6 @@ import { Icon } from "astro-icon/components";
 						</a>
 					))
 				}
-				
-				<a
-					class="flex h-8 items-center rounded-lg bg-accent-base/5 px-4 text-accent-base underline-offset-2 hover:bg-accent-base/10"
-					data-astro-prefetch
-					href="/posts/citrus-docs/intro/"
-				>
-					Docs
-				</a>
 				
 				<!-- Dropdown menu button for large screens. Needs improvement. -->
 				<!--
@@ -216,7 +176,6 @@ import { Icon } from "astro-icon/components";
 			class="text-lg absolute inset-0 flex flex-col items-center justify-center gap-y-4 text-center font-medium text-accent-two"
 			id="nav-menu-mobile"
 		>
-			<!-- Ссылки меню -->
 			{
 				menuLinks.map((link) => (
 					<a
