--- a/astro-app/src/components/SocialList.astro
+++ b/astro-app/src/components/SocialList.astro
@@ -13,9 +13,14 @@ const socialLinks: {
 	name: string;
 }[] = [
 	{
-		friendlyName: "Github",
-		link: "https://github.com/artemkutsan/astro-citrus",
-		name: "mdi:github",
+		friendlyName: "Facebook",
+		link: "https://www.facebook.com/denicewithac",
+		name: "mdi:facebook",
+	},
+	{
+		friendlyName: "Instagram",
+		link: "https://www.instagram.com/denice.with.a.c/",
+		name: "mdi:instagram",
 	},
 ];
 ---
