--- a/astro-app/src/pages/index.astro
+++ b/astro-app/src/pages/index.astro
@@ -24,6 +24,10 @@ const latestNotes = allNotes.sort(collectionDateSort).slice(0, MAX_NOTES);
 <PageLayout meta={{ title: "Home" }}>
 	<!-- Hero section -->
 	<!-- Background blur -->
+	 
+	<div class="absolute top-0 left-1/2 -ml-[50vw] min-h-screen w-screen pointer-events-none opacity-50 overflow-x-hidden">
+		<div class="absolute w-full h-full bg-no-repeat bg-cover bg-[url(/images/cover.jpg)] bg-bottom-left"></div>
+	</div>
 	<div class="absolute top-0 left-1/2 md:top-[-15%] -ml-[50vw] min-h-screen w-screen pointer-events-none blur-3xl opacity-50 overflow-x-hidden">
 		<div class="absolute top-[10%] right-[-40%] w-[65%] h-full bg-gradient-to-b from-purple-300 via-blue-300 to-transparent rounded-full opacity-30 dark:opacity-10"></div>
 		<div class="absolute top-[10%] left-[-40%] w-[65%] h-full bg-gradient-to-b from-blue-300 via-pink-300 to-transparent rounded-full opacity-30 dark:opacity-10"></div>
