--- a/astro-app/src/pages/index.astro
+++ b/astro-app/src/pages/index.astro
@@ -56,20 +56,24 @@ const latestNotes = allNotes.sort(collectionDateSort).slice(0, MAX_NOTES);
 	</section>
 
 	<!-- Posts Section -->
-	<section aria-label="Blog post list" class="'mt-[-100vh] pt-[100vh]'">
-		<h2 class="title mb-6 text-xl text-accent-two">
-			<a href="/posts/">Posts</a>
-		</h2>
-		<ul class="space-y-4 md:space-y-2" role="list">
-			{
-				allPostsByDate.map((p) => (
-					<li class="gap-2 sm:grid-cols-[auto_1fr]">
-						<PostPreview post={p} />
-					</li>
-				))
-			}
-		</ul>
-	</section>
+	{
+		allPostsByDate.length > 0 && (
+			<section aria-label="Blog post list" class="'mt-[-100vh] pt-[100vh]'">
+				<h2 class="title mb-6 text-xl text-accent-two">
+					<a href="/posts/">Posts</a>
+				</h2>
+				<ul class="space-y-4 md:space-y-2" role="list">
+					{
+						allPostsByDate.map((p) => (
+							<li class="gap-2 sm:grid-cols-[auto_1fr]">
+								<PostPreview post={p} />
+							</li>
+						))
+					}
+				</ul>
+			</section>
+		)
+	}
 
 	<!-- Notes Section -->
 	{
@@ -125,4 +129,3 @@ const latestNotes = allNotes.sort(collectionDateSort).slice(0, MAX_NOTES);
 	</div>
 	-->
 </PageLayout>
-
