--- a/astro-app/src/pages/index.astro
+++ b/astro-app/src/pages/index.astro
@@ -4,6 +4,7 @@ import SocialList from "@/components/SocialList.astro";
 import PostPreview from "@/components/blog/PostPreview.astro";
 import Note from "@/components/note/Note.astro";
 import { getAllPosts } from "@/data/post";
+import { getAllNotes } from "@/data/note";
 import { siteConfig } from "@/site.config";
 import PageLayout from "@/layouts/Base.astro";
 import { collectionDateSort } from "@/utils/date";
@@ -17,8 +18,10 @@ const allPostsByDate = allPosts
 
 // Notes
 const MAX_NOTES = 2;
-const allNotes = await getCollection("note");
-const latestNotes = allNotes.sort(collectionDateSort).slice(0, MAX_NOTES);
+const allNotes = await getAllNotes();
+const latestNotes = allNotes
+	.sort(collectionDateSort)
+	.slice(0, MAX_NOTES) as CollectionEntry<"note">[];
 ---
 
 <PageLayout meta={{ title: "Home" }}>
