--- a/astro-app/src/components/layout/Header.astro
+++ b/astro-app/src/components/layout/Header.astro
@@ -25,11 +25,11 @@ import { Icon } from "astro-icon/components";
 	</div>
 	
 	<div class="w-full justify-between sm:flex-col">
-		<div class="flex items-center gap-x-2">
+		<div class="flex items-center">
 			<a
 				aria-label={siteConfig.title}
 				aria-current={Astro.url.pathname === "/" ? "page" : false}
-				class="group flex h-8 items-center hover:filter-none sm:relative"
+				class="group flex md:w-40 h-8 items-center hover:filter-none sm:relative"
 				href="/"
 			>	
 
@@ -46,7 +46,7 @@ import { Icon } from "astro-icon/components";
 			</a>
 			<nav
 				aria-label="Main menu"
-				class="top-20 text-sm mx-auto ml-4 ml-auto hidden flex-col items-end justify-center gap-x-4 rounded-md bg-bgColor font-medium text-accent-two shadow backdrop-blur group-[.menu-open]:z-50 group-[.menu-open]:flex sm:static sm:z-auto sm:flex-row sm:items-center sm:rounded-none sm:bg-transparent sm:shadow-none sm:backdrop-blur-none md:flex"
+				class="top-20 grow text-sm mx-auto ml-4 ml-auto hidden flex-col items-end justify-center gap-x-4 rounded-md bg-bgColor font-medium text-accent-two shadow backdrop-blur group-[.menu-open]:z-50 group-[.menu-open]:flex sm:static sm:z-auto sm:flex-row sm:items-center sm:rounded-none sm:bg-transparent sm:shadow-none sm:backdrop-blur-none md:flex"
 				id="main-navigation-menu"
 			>
 				{
@@ -61,52 +61,9 @@ import { Icon } from "astro-icon/components";
 						</a>
 					))
 				}
-				
-				<!-- Dropdown menu button for large screens. Needs improvement. -->
-				<!--
-				<button
-					aria-expanded="false"
-					aria-haspopup="menu"
-					aria-label="Open main menu"
-					class="hidden md:flex group text-sm relative h-8 w-16 font-medium items-center justify-center px-4 rounded-lg bg-accent-base/5 text-accent-base hover:bg-accent-base/10"
-					id="toggle-navigation-menu"
-					type="button"
-				>
-					Menu
-				</button>
-				-->
 			</nav>
-			
-			<!-- Dropdown menu for large screens. Needs improvement. -->
-			<!--
-			<div id="menu" class="absolute left-0 right-0 w-fit ml-auto top-16 z-10 hidden" aria-hidden="true">
-				<div
-					id="menu-body"
-					class="fixed bg-bgColor rounded-lg -ml-56 w-56"
-				>
-					<nav
-						aria-label="Main menu"
-						class="px-4 py-4 rounded-lg border border-special-lighter bg-special-light shadow-[0px_10px_25px_rgba(0,0,0,0.15)] text-sm flex flex-col gap-y-2 font-medium"
-						id="main-navigation-menu"
-					>
-						{
-							menuLinks.map((link) => (
-								<a
-									aria-current={Astro.url.pathname === link.path ? "page" : false}
-									class="text-accent-two underline-offset-2 hover:underline rounded-lg h-8 gap-x-1 px-2 flex justify-center items-center"
-									data-astro-prefetch
-									href={link.path}
-								>
-									{link.title}
-								</a>
-							))
-						}
-					</nav>
-				</div>
-			</div>
-			-->
 
-			<div class="ml-auto w-fit">
+			<div class="ml-auto w-fit md:	w-40">
 				<div id="buttons-panel" class="top-4 md:top-8 -ml-[4.5rem] flex space-x-2">
 					<Search />
 					<ThemeToggle />
