--- a/astro-app/src/pages/about.astro
+++ b/astro-app/src/pages/about.astro
@@ -12,27 +12,18 @@ const meta = {
 	<h1 class="title mb-6">About</h1>
 	<div class="prose prose-citrus max-w-none">
 		<p>
-			Hi, I’m a starter Astro. I’m particularly great for getting you started with your own blogging
-			website.
+			Hi! My name is Denice and I love all things crafty; Crochet, sewing, embroidery etc. 
+			I also love all things seasonal, wether it be cosy pumpkins, summer flowers, or anything
+			Christmas.
 		</p>
-		<p>Here are my some of my awesome built in features:</p>
-		<ul class="list-inside list-disc" role="list">
-			<li>I'm ultra fast as I'm a static site</li>
-			<li>I'm fully responsive</li>
-			<li>I come with a light and dark mode</li>
-			<li>I'm easy to customise and add additional content</li>
-			<li>I have Tailwind CSS styling</li>
-			<li>Shiki code syntax highlighting</li>
-			<li>Satori for auto generating OG images for blog posts</li>
-		</ul>
 		<p>
-			Clone or fork my <a
-				aria-label="github repository"
-				class="citrus-link inline-block"
-				href="https://github.com/artemkutsan/astro-citrus"
-				rel="noreferrer"
-				target="_blank">repo</a
-			> if you like me!
+			I live in Oxfordshire with my family and 2 cats and a very lovely Labrador, Albert,
+			and enjoy getting out into the countryside. I take a lot of inspiration from the natural 
+			world, from pinecones, to trees and flowers.
+		</p>
+		<p>
+			I always love a challenge and learning new things, so antything! don't have but you may be 
+			looking for, do feel free to reach out!
 		</p>
 	</div>
 
