--- a/astro-app/src/pages/notes/[...slug].astro
+++ b/astro-app/src/pages/notes/[...slug].astro
@@ -1,13 +1,12 @@
 ---
-import { getCollection } from "astro:content";
-
+import { getAllNotes } from "@/data/note";
 import Note from "@/components/note/Note.astro";
 import PageLayout from "@/layouts/Base.astro";
 import type { GetStaticPaths, InferGetStaticPropsType } from "astro";
 
 // If you're using an adaptor in SSR mode, getStaticPaths wont work -> https://docs.astro.build/en/guides/routing/#modifying-the-slug-example-for-ssr
 export const getStaticPaths = (async () => {
-	const allNotes = await getCollection("note");
+	const allNotes = await getAllNotes();
 	return allNotes.map((note) => ({
 		params: { slug: note.id },
 		props: { note },
