cleanup unused usings

--- a/astro-app/src/pages/notes/[...page].astro
+++ b/astro-app/src/pages/notes/[...page].astro
@@ -1,5 +1,5 @@
 ---
-import { type CollectionEntry, getCollection } from "astro:content";
+import { type CollectionEntry } from "astro:content";
 import Pagination from "@/components/Paginator.astro";
 import Note from "@/components/note/Note.astro";
 import { getAllNotes } from "@/data/note";
