make about page prettier

--- a/astro-app/src/pages/about.astro
+++ b/astro-app/src/pages/about.astro
@@ -8,23 +8,12 @@ const meta = {
 ---
 
 <PageLayout meta={meta}>
-
-	<h1 class="title mb-6">About</h1>
-	<div class="prose prose-citrus max-w-none">
-		<p>
-			Hi! My name is Denice and I love all things crafty; Crochet, sewing, embroidery etc. 
-			I also love all things seasonal, wether it be cosy pumpkins, summer flowers, or anything
-			Christmas.
-		</p>
-		<p>
-			I live in Oxfordshire with my family and 2 cats and a very lovely Labrador, Albert,
-			and enjoy getting out into the countryside. I take a lot of inspiration from the natural 
-			world, from pinecones, to trees and flowers.
-		</p>
-		<p>
-			I always love a challenge and learning new things, so antything! don't have but you may be 
-			looking for, do feel free to reach out!
-		</p>
+	<div class="absolute top-0 left-1/2 md:top-[-15%] -ml-[50vw] min-h-screen w-screen pointer-events-none blur-3xl opacity-50 overflow-x-hidden">
+		<div class="absolute top-[10%] right-[-40%] w-[65%] h-full bg-gradient-to-b from-purple-300 via-blue-300 to-transparent rounded-full opacity-30 dark:opacity-10"></div>
+		<div class="absolute top-[10%] left-[-40%] w-[65%] h-full bg-gradient-to-b from-blue-300 via-pink-300 to-transparent rounded-full opacity-30 dark:opacity-10"></div>
+		<div class="absolute top-[-20%] left-[-50%] w-[85%] h-full bg-gradient-to-b from-indigo-300 via-orange-300 to-transparent rounded-full opacity-60 dark:opacity-10"></div>
+		<div class="absolute top-[-20%] right-[-50%] w-[85%] h-full bg-gradient-to-b from-orange-300 via-indigo-300 to-transparent rounded-full opacity-60 dark:opacity-10"></div>
 	</div>
+	<section class="mb-10">
 
 </PageLayout>
