index the about page - ensures that the search works, even if there are no published blog posts or notes

--- a/astro-app/src/pages/about.astro
+++ b/astro-app/src/pages/about.astro
@@ -15,7 +15,7 @@ const meta = {
 		<div class="absolute top-[-20%] left-[-50%] w-[85%] h-full bg-gradient-to-b from-indigo-300 via-orange-300 to-transparent rounded-full opacity-60 dark:opacity-10"></div>
 		<div class="absolute top-[-20%] right-[-50%] w-[85%] h-full bg-gradient-to-b from-orange-300 via-indigo-300 to-transparent rounded-full opacity-60 dark:opacity-10"></div>
 	</div>
-	<section class="mb-10">
+	<article class="mb-10" data-pagefind-body>
 		<h1 class="title mb-6">About</h1>
 		<div class="prose prose-citrus max-w-none">
 			<p>
