--- a/astro-app/src/pages/about.astro
+++ b/astro-app/src/pages/about.astro
@@ -1,5 +1,5 @@
 ---
-import ContactForm from "@/components/ContactForm.astro";
+import ContactFormModal from "@/components/ContactFormModal.astro";
 import PageLayout from "@/layouts/Base.astro";
 
 const meta = {
@@ -35,5 +35,5 @@ const meta = {
 		</div>
 	</section>
 
-	<ContactForm />
+	<ContactFormModal />
 </PageLayout>
