--- a/astro-app/src/components/Search.astro
+++ b/astro-app/src/components/Search.astro
@@ -16,7 +16,7 @@ import { Icon } from "astro-icon/components";
 
 	<dialog
 		aria-label="search"
-		class="h-full max-h-full w-full max-w-full md:h-fit bg-bgColor backdrop:backdrop-blur-xl md:my-8 md:min-h-[6.5rem] 'md:w-5/6' md:max-w-[44rem] md:rounded-lg overflow-y-hidden"
+		class="h-full max-h-full w-full max-w-full md:h-fit bg-bgColor backdrop:backdrop-blur-xl md:my-8 md:min-h-[6.5rem] 'md:w-5/6' md:max-w-[44rem] md:rounded-lg overflow-y-auto"
 	>	
 		<div class="dialog-frame flex flex-col h-[100%] px-4 pt-4 pb-4 md:px-8 md:py-8 gap-4">
 			<!-- Заголовок и кнопка закрытия -->
@@ -59,7 +59,7 @@ import { Icon } from "astro-icon/components";
 		closeModal = () => {
 			if (this.dialog.open) {
 				this.dialog.close();
-				document.body.classList.remove("overflow-hidden");
+				document.documentElement.classList.remove("overflow-hidden");
 				window.removeEventListener("click", this.onWindowClick);
 			}
 		};
@@ -86,7 +86,7 @@ import { Icon } from "astro-icon/components";
 
 		openModal = (event?: MouseEvent) => {
 			this.dialog.showModal();
-			document.body.classList.add("overflow-hidden");
+			document.documentElement.classList.add("overflow-hidden");
 			this.querySelector("input")?.focus();
 			event?.stopPropagation();
 			window.addEventListener("click", this.onWindowClick);
