bugfix - close the correct tag on the about page..

--- a/astro-app/src/pages/about.astro
+++ b/astro-app/src/pages/about.astro
@@ -33,7 +33,7 @@ const meta = {
 				looking for, do feel free to reach out!
 			</p>
 		</div>
-	</section>
+	</article>
 
 	<ContactFormModal />
 </PageLayout>
