move contact form to bottom of every page

--- a/astro-app/src/components/ContactForm.astro
+++ b/astro-app/src/components/ContactForm.astro
@@ -8,17 +8,17 @@ import { web3FormsApiKey } from "@/site.config";
             <input type="hidden" name="access_key" value={web3FormsApiKey}>
 
             <div class="mb-4 w-50">
-                <label for="name" class="block text-sm font-medium text-lighter">Your name</label>
+                <label for="name" class="block text-sm font-medium text-lighter text-left">Your name</label>
                 <input type="text" name="name" required class="mt-1 block sm:w-80 w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm">
             </div>
             
             <div class="mb-4 w-50">
-                <label for="email" class="block text-sm font-medium text-lighter">Your email</label>
+                <label for="email" class="block text-sm font-medium text-lighter text-left">Your email</label>
                 <input type="email" name="email" required class="mt-1 block sm:w-80 w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm">
             </div>
             
             <div class="mb-4">
-                <label for="message" class="block text-sm font-medium text-lighter">Message</label>
+                <label for="message" class="block text-sm font-medium text-lighter text-left">Message</label>
                 <textarea name="message" required rows="4" class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm"></textarea>
             </div>
             
