--- a/astro-app/src/pages/about.astro
+++ b/astro-app/src/pages/about.astro
@@ -16,7 +16,7 @@ const meta = {
 		<div class="absolute top-[-20%] right-[-50%] w-[85%] h-full bg-gradient-to-b from-orange-300 via-indigo-300 to-transparent rounded-full opacity-60 dark:opacity-10"></div>
 	</div>
 	<article class="mb-10" data-pagefind-body>
-		<h1 class="title mb-6">About</h1>
+		<h1 class="title mb-6 text-xl text-accent-two">About</h1>
 		<div class="prose prose-citrus max-w-none">
 			<p>
 				Hi! My name is Denice and I love all things crafty: Crochet, sewing, embroidery etc. 
@@ -34,6 +34,4 @@ const meta = {
 			</p>
 		</div>
 	</article>
-
-	<ContactFormModal />
 </PageLayout>
