--- a/astro-app/src/pages/index.astro
+++ b/astro-app/src/pages/index.astro
@@ -8,6 +8,7 @@ import { getAllNotes } from "@/data/note";
 import { siteConfig } from "@/site.config";
 import PageLayout from "@/layouts/Base.astro";
 import { collectionDateSort } from "@/utils/date";
+import ContactFormModal from "@/components/ContactFormModal.astro";
 
 // Posts
 const MAX_POSTS = 10;
@@ -45,7 +46,7 @@ const latestNotes = allNotes
 			<p class="mt-4 mb-4 text-lg font-medium">
 				I'm Denice, a crafter from Oxfordshire, with a love for all things Crochet and Textile.
 			</p>
-			<div class="flex justify-center mb-4">
+			<div class="flex justify-center mb-10">
 				<SocialList />
 			</div>
 			{
