Add social link to etsy store

--- a/astro-app/src/components/SocialList.astro
+++ b/astro-app/src/components/SocialList.astro
@@ -14,7 +14,7 @@ const socialLinks: {
 }[] = [
 	{
 		friendlyName: "Facebook",
-		link: "https://www.facebook.com/denicewithac",
+		link: "https://www.facebook.com/denice.with.a.c",
 		name: "mdi:facebook",
 	},
 	{
@@ -22,6 +22,11 @@ const socialLinks: {
 		link: "https://www.instagram.com/denice.with.a.c/",
 		name: "mdi:instagram",
 	},
+	{
+		friendlyName: "Etsy",
+		link: "https://www.etsy.com/uk/shop/DenicewithaC",
+		name: "mdi:etsy",
+	}
 ];
 ---
 
