tidy up contact form/footer padding

--- a/astro-app/src/layouts/Base.astro
+++ b/astro-app/src/layouts/Base.astro
@@ -54,12 +54,14 @@ const {
 						<slot />
 					</main>
 
-					<section class="mb-10 mt-10">
+					<section class="mt-12">
 						<h2 class="title mb-4 text-xl text-accent-one">Get in touch</h2>
 						<p class="mb-4">
 							Whether you have a question, want to collaborate, or just want to say hello, I'd love to hear from you. 
 						</p>
-						<ContactFormModal />
+						<div class="mt-12">
+							<ContactFormModal />
+						</div>
 					</section>
 
 					<Footer />
