--- a/astro-app/src/pages/about.astro
+++ b/astro-app/src/pages/about.astro
@@ -1,9 +1,8 @@
 ---
-import ContactFormModal from "@/components/ContactFormModal.astro";
 import PageLayout from "@/layouts/Base.astro";
 
 const meta = {
-	description: "I'm a starter theme for Astro.build",
+	description: "About Denice with a C",
 	title: "About",
 };
 ---
