open shop link in new window

--- a/astro-app/src/components/EtsyShop.astro
+++ b/astro-app/src/components/EtsyShop.astro
@@ -112,7 +112,8 @@ import { etsyStoreName } from "@/site.config";
     <h2 class="item-title mb-4 text-xl text-accent-two"></h2>
     <p class="item-price mb-4 font-semibold"></p>
     <p class="item-description mb-4"></p>
-    <a class="item-link relative flex items-center justify-center h-8 px-4 rounded-lg shadow-lg hover:brightness-110 transition-all bg-gradient-to-r from-accent-one to-accent-two" data-astro-source-file="/app/src/pages/index.astro" data-astro-source-loc="54:188">
+    <a class="item-link relative flex items-center justify-center h-8 px-4 rounded-lg shadow-lg hover:brightness-110 transition-all bg-gradient-to-r from-accent-one to-accent-two"
+       target="_blank">
       <span class="text-bgColor font-semibold">
         More info
       </span>
