make it possible to pass in an alternative store name to the URL via ?etsyStoreName=____ - for debug purposes

--- a/astro-app/src/components/EtsyShop.astro
+++ b/astro-app/src/components/EtsyShop.astro
@@ -2,7 +2,9 @@
 import { etsyStoreName } from "@/site.config";
 ---
 
-<script is:inline define:vars={{ etsyStoreName }}>
+<script is:inline define:vars={{ defaultEtsyStoreName: etsyStoreName }}>
+  const urlParams = new URLSearchParams(window.location.search);
+  const etsyStoreName = urlParams.get('etsyStoreName') || defaultEtsyStoreName;
   const etsyFeedUrl = `https://www.etsy.com/shop/${etsyStoreName}/rss`;
   
   function formatPrice(priceString) {
