--- a/astro-app/src/components/BaseHead.astro
+++ b/astro-app/src/components/BaseHead.astro
@@ -1,6 +1,6 @@
 ---
 import { WEBMENTION_PINGBACK, WEBMENTION_URL } from "astro:env/client";
-import { siteConfig, ga4MeasurementId } from "@/site.config";
+import { siteConfig } from "@/site.config";
 import type { SiteMeta } from "@/types";
 import "@/styles/global.css";
 
@@ -12,8 +12,6 @@ const titleSeparator = "•";
 const siteTitle = `${title} ${titleSeparator} ${siteConfig.title}`;
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 const socialImageURL = new URL(ogImage ? ogImage : "/social-card.png", Astro.url).href;
-
-const ga4URL = `https://www.googletagmanager.com/gtag/js?id=${ga4MeasurementId}`;
 ---
 
 <meta charset="utf-8" />
@@ -85,21 +83,6 @@ const ga4URL = `https://www.googletagmanager.com/gtag/js?id=${ga4MeasurementId}`
 			{WEBMENTION_PINGBACK && <link href={WEBMENTION_PINGBACK} rel="pingback" />}
 		</>
 	)
-}
-
-{/* Google Analytics */}
-{
-	ga4MeasurementId && (<>
-			<script async src={ga4URL} ></script>
-			<script>
-				import { ga4MeasurementId } from "@/site.config";
-
-				window.dataLayer = window.dataLayer || [];
-				function gtag(){dataLayer.push(arguments);}
-				gtag('js', new Date());
-				gtag('config', ga4MeasurementId);
-			</script>
-	</>)
 }
 
 <meta content={Astro.generator} name="generator" />
