--- a/astro-app/src/components/BaseHead.astro
+++ b/astro-app/src/components/BaseHead.astro
@@ -1,6 +1,6 @@
 ---
 import { WEBMENTION_PINGBACK, WEBMENTION_URL } from "astro:env/client";
-import { siteConfig } from "@/site.config";
+import { siteConfig, ga4MeasurementId } from "@/site.config";
 import type { SiteMeta } from "@/types";
 import "@/styles/global.css";
 
@@ -12,6 +12,16 @@ const titleSeparator = "•";
 const siteTitle = `${title} ${titleSeparator} ${siteConfig.title}`;
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 const socialImageURL = new URL(ogImage ? ogImage : "/social-card.png", Astro.url).href;
+
+const gaScript = ga4MeasurementId ? `
+	<script async src="https://www.googletagmanager.com/gtag/js?id=${ga4MeasurementId}"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+		gtag('config', ga4MeasurementId);
+	</script>
+` : null;
 ---
 
 <meta charset="utf-8" />
@@ -84,5 +94,11 @@ const socialImageURL = new URL(ogImage ? ogImage : "/social-card.png", Astro.url
 		</>
 	)
 }
+
+{/* Analytics */}
+{ 
+	gaScript && <script set:html={gaScript} /> 
+}
+
 
 <meta content={Astro.generator} name="generator" />
