--- a/astro-app/src/components/BaseHead.astro
+++ b/astro-app/src/components/BaseHead.astro
@@ -13,7 +13,15 @@ const siteTitle = `${title} ${titleSeparator} ${siteConfig.title}`;
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 const socialImageURL = new URL(ogImage ? ogImage : "/social-card.png", Astro.url).href;
 
-const ga4URL = `https://www.googletagmanager.com/gtag/js?id=${ga4MeasurementId}`;
+const gaScript = ga4MeasurementId ? `
+	<script async src="https://www.googletagmanager.com/gtag/js?id=${ga4MeasurementId}"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+		gtag('config', ga4MeasurementId);
+	</script>
+` : null;
 ---
 
 <meta charset="utf-8" />
@@ -87,19 +95,10 @@ const ga4URL = `https://www.googletagmanager.com/gtag/js?id=${ga4MeasurementId}`
 	)
 }
 
-{/* Google Analytics */}
-{
-	ga4MeasurementId && (<>
-			<script async src={ga4URL} ></script>
-			<script>
-				import { ga4MeasurementId } from "@/site.config";
-
-				window.dataLayer = window.dataLayer || [];
-				function gtag(){dataLayer.push(arguments);}
-				gtag('js', new Date());
-				gtag('config', ga4MeasurementId);
-			</script>
-	</>)
+{/* Analytics */}
+{ 
+	gaScript && <script set:html={gaScript} /> 
 }
+
 
 <meta content={Astro.generator} name="generator" />
