--- a/astro-app/src/components/BaseHead.astro
+++ b/astro-app/src/components/BaseHead.astro
@@ -19,7 +19,7 @@ const gaScript = ga4MeasurementId ? `
 		window.dataLayer = window.dataLayer || [];
 		function gtag(){dataLayer.push(arguments);}
 		gtag('js', new Date());
-		gtag('config', ga4MeasurementId);
+		gtag('config', ${ga4MeasurementId});
 	</script>
 ` : null;
 ---
