Change script tag to Fragment for GA script

--- a/astro-app/src/components/BaseHead.astro
+++ b/astro-app/src/components/BaseHead.astro
@@ -97,7 +97,7 @@ const gaScript = ga4MeasurementId ? `
 
 {/* Analytics */}
 { 
-	gaScript && <script set:html={gaScript} /> 
+	gaScript && <Fragment set:html={gaScript} /> 
 }
 
 
