Change ctafrom 'Read Blog' to 'View Shop'

--- a/astro-app/src/pages/index.astro
+++ b/astro-app/src/pages/index.astro
@@ -51,9 +51,9 @@ const latestNotes = allNotes
 			{
 				allPostsByDate.length > 0 && (
 					<div class="flex justify-center space-x-4 mt-4">
-						<a href="/posts/" class="relative flex items-center justify-center h-8 px-4 rounded-lg shadow-lg hover:brightness-110 transition-all bg-gradient-to-r from-accent-one to-accent-two">
+						<a href="/shop/" class="relative flex items-center justify-center h-8 px-4 rounded-lg shadow-lg hover:brightness-110 transition-all bg-gradient-to-r from-accent-one to-accent-two">
 							<span class="text-bgColor font-semibold">
-								Read Blog
+								View Shop
 							</span>
 						</a>
 					</div>
